--- a/wine_blog/static/wine_blog/css/styles.css
+++ b/wine_blog/static/wine_blog/css/styles.css
@@ -4,8 +4,9 @@
 
 .upper-body {
   background-image: linear-gradient(to bottom, rgba(255,255,255,0) 10%,
-  rgba(255,255,255,1)), url("/static/wine_blog/media/wine_design1.png");
-  height: 70vh;
+  rgba(255,255,255,1)), url("/static/wine_blog/media/wine_design2.png");
+  height: 100vh;
+  margin-bottom: 10px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,13 +16,19 @@
 }
 
 .upper-body-text {
-  height: 40vh;
   text-align: center;
   position: absolute;
+  margin-top: 100px;
+  margin-bottom: 20px;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+}
+
+.container-for-buttons {
+  margin: 3px;
+  text-align: center;
 }
 
 @media only screen and (min-width: 265px) {
@@ -44,11 +51,6 @@
   box-shadow: 0 7px 13px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-.container-for-buttons {
-  margin: 3px;
-  text-align: center;
-}
-
 .colu {
   display: inline-block;
   margin: 3px;
@@ -56,6 +58,9 @@
 }
 
 .column {
+  display: grid;
+  justify-items: center;
+  text-align: center;
   max-width: 450px;
   max-height: 380px;
   margin-top: 15px;
@@ -66,8 +71,6 @@
   justify-content: center;
   display: flex;
   padding-top:10px;
-  padding-left: 100px;
-  padding-right: 100px;
 }
 
 .card {
@@ -133,7 +136,7 @@
   align-content: center;
 }
 
-#wine_images, #chart_logo, #associated_header, .pagination, #message, #menu-filter_image {
+#wine_images, #chart_logo, #associated_header, .pagination, #message, #menu-filter-image {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -236,7 +239,7 @@ label[for="ham-menu"] {
 .ham-menu > ul > li {
   color: mediumseagreen;
   list-style: none;
-  font-size: 30px;
+  font-size: 3vw;
   cursor: pointer;
   transition: all linear 0.25s;
 }
