--- a/wine_blog/templates/wine_blog/index.html
+++ b/wine_blog/templates/wine_blog/index.html
@@ -3,24 +3,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- METAS -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Wine Blog
-            {% block title %}
-            {% endblock %}
-        </title>
-        <!-- FAVICON -->
-        <link rel="icon" type="image/png" sizes="32x32" href="static/wine_blog/media/favicon-32x32.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css" rel="stylesheet"/>
-        <script src="https://kit.fontawesome.com/e2449c9314.js" crossorigin="anonymous"></script>
-        <script src="https://use.fontawesome.com/7739bc757f.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="{% static 'wine_blog/css/styles.css' %}">
+      <!-- METAS -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>
+        {% block title %}
+            Wine Blog 
+        {% endblock %}
+      </title>
+
+      <link rel="icon" type="image/png" sizes="32x32" href="static/wine_blog/media/favicon-32x32.png">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.3.1/css/flag-icon.min.css">
+      <link rel="stylesheet" href="{% static 'wine_blog/css/styles.css' %}">
+      <script src="https://kit.fontawesome.com/e2449c9314.js" crossorigin="anonymous"></script>
+      <script src="https://use.fontawesome.com/7739bc757f.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+      
     </head>
     <body>
       {% block body %}
@@ -40,13 +41,8 @@
             </label>
             <div class="full-page-green"></div>
             <div class="ham-menu">
-              <div>
-                <a class="navbar-brand" href="{% url 'index' %}">
-                  <img src="static/wine_blog/media/LogoNavBar.png" alt="LogoNavBar" style="width:120px;" class="rounded-pill">
-                </a>
-              </div>
               <ul id="menu">
-                <div class="container" style="text-align:center"><i class="fa-solid fa-dice fa-2x" style="color: mediumseagreen;"></i></div>
+                <div class="container"><i class="fa-solid fa-dice fa-2x" style="color: mediumseagreen;"></i></div>
                 <li>Random wine</li>
                 <hr>
                 <li style="color: #F71450;">Red</li>
@@ -103,7 +99,7 @@
           </div>
         </div>
         <!-- CONTENT HEADER -->
-        <div id="top">
+        <div id="top"> 
           <div class="upper-body">
             <div class="upper-body-text">
               <div class="container" style="padding:15px;">
@@ -139,7 +135,7 @@
             </div>
           </div>
           <!-- CONTENT BODY -->
-          <div class="container" id="menu-filter_image">
+          <div class="container" id="menu-filter-image">
             {% if img_for_menu_item %}
             <img src="{{ img_for_menu_item }}" alt="menu-filter_image" style="width:190px;">
             {% endif %}
@@ -149,9 +145,9 @@
             <div class="row" style="justify-content: center;">
               {% for wine_card in wine_cards %}
                 <div class="column">
-                  <div class="card h-100">
+                  <div class="card" style="width: 20rem;">
                     {% if wine_card.image_url %}
-                    <div style="width:420px; height: 235px;">
+                    <div style="max-width:380px; height: 235px;">
                       <img src={{ wine_card.image_url }} class="media-object" style="width:100%; height: 100%; object-fit: cover">
                     </div>
                     {% else %}
